--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">about</a>
         <a href="contact.html">contact</a>
+        <a href="sales.html">Store</a>
       </nav>
 
       <!--Hero Section-->
