--- a/sales.html
+++ b/sales.html
@@ -12,9 +12,9 @@
             <img src="img/logo.png" alt="cakes for sale">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="sales.html">Sales</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
+                 <a href="sales.html">Store</a>
             </nav>
         </header>
         
